--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,59 +27,23 @@ dist.jar=${dist.dir}/CLUtilities.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.eventbus.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/eventbus.jar
-file.reference.j-ogg-oggd.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/j-ogg-oggd.jar
-file.reference.j-ogg-vorbisd.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/j-ogg-vorbisd.jar
-file.reference.jbullet.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jbullet.jar
-file.reference.jinput.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jinput.jar
-file.reference.jME3-blender.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-blender.jar
-file.reference.jME3-core.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-core.jar
-file.reference.jME3-desktop.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-desktop.jar
-file.reference.jME3-jbullet.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-jbullet.jar
-file.reference.jME3-jogg.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-jogg.jar
-file.reference.jME3-lwjgl-natives.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-lwjgl-natives.jar
-file.reference.jME3-lwjgl.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-lwjgl.jar
-file.reference.jME3-niftygui.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-niftygui.jar
-file.reference.jME3-plugins.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-plugins.jar
-file.reference.jME3-terrain.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-terrain.jar
-file.reference.jME3-testdata.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/jME3-testdata.jar
-file.reference.lwjgl.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/lwjgl.jar
-file.reference.nifty-default-controls.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/nifty-default-controls.jar
-file.reference.nifty-examples.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/nifty-examples.jar
-file.reference.nifty-style-black.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/nifty-style-black.jar
-file.reference.nifty.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/nifty.jar
-file.reference.noise-0.0.1-SNAPSHOT.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/noise-0.0.1-SNAPSHOT.jar
-file.reference.stack-alloc.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/stack-alloc.jar
-file.reference.vecmath.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/vecmath.jar
-file.reference.xmlpull-xpp3.jar=/Users/skyebook/Downloads/jME3_2012-02-07/lib/xmlpull-xpp3.jar
+file.reference.aparapi-2011-10-13-aparapi-2011-10-13=C:\\Users\\Skye Book\\Downloads\\aparapi-2011-10-13\\aparapi-2011-10-13
+file.reference.aparapi.jar=C:\\Users\\Skye Book\\Downloads\\aparapi-2011-10-13\\aparapi-2011-10-13\\aparapi.jar
+file.reference.jME3-core.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\build\\jME3-core.jar
+file.reference.jME3-desktop.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\build\\jME3-desktop.jar
+file.reference.jME3-lwjgl-natives.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\lib\\lwjgl\\jME3-lwjgl-natives.jar
+file.reference.jME3-lwjgl.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\build\\jME3-lwjgl.jar
+file.reference.lwjgl.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\lib\\lwjgl\\lwjgl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jME3-core.jar}:\
-    ${file.reference.jME3-blender.jar}:\
-    ${file.reference.jME3-terrain.jar}:\
-    ${file.reference.jME3-lwjgl.jar}:\
-    ${file.reference.jME3-niftygui.jar}:\
-    ${file.reference.jME3-plugins.jar}:\
-    ${file.reference.jME3-jbullet.jar}:\
     ${file.reference.jME3-desktop.jar}:\
-    ${file.reference.jME3-jogg.jar}:\
-    ${file.reference.nifty-examples.jar}:\
-    ${file.reference.nifty-style-black.jar}:\
-    ${file.reference.nifty.jar}:\
-    ${file.reference.nifty-default-controls.jar}:\
-    ${file.reference.jME3-testdata.jar}:\
-    ${file.reference.eventbus.jar}:\
-    ${file.reference.jinput.jar}:\
-    ${file.reference.j-ogg-vorbisd.jar}:\
-    ${file.reference.jbullet.jar}:\
-    ${file.reference.j-ogg-oggd.jar}:\
-    ${file.reference.xmlpull-xpp3.jar}:\
-    ${file.reference.noise-0.0.1-SNAPSHOT.jar}:\
+    ${file.reference.jME3-lwjgl.jar}:\
+    ${file.reference.jME3-lwjgl-natives.jar}:\
     ${file.reference.lwjgl.jar}:\
-    ${file.reference.stack-alloc.jar}:\
-    ${file.reference.vecmath.jar}:\
-    ${file.reference.jME3-lwjgl-natives.jar}
+    ${file.reference.aparapi-2011-10-13-aparapi-2011-10-13}:\
+    ${file.reference.aparapi.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,7 +67,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=net.skyebook.cl.DistanceTest
+main.class=net.skyebook.cl.CLDistanceTest
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
