--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,9 @@ file.reference.jME3-lwjgl-natives.jar=D:\\My Documents\\jMonkeyProjects\\jMonkey
 file.reference.jME3-lwjgl.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\build\\jME3-lwjgl.jar
 file.reference.lwjgl.jar=D:\\My Documents\\jMonkeyProjects\\jMonkeyEngine\\engine\\lib\\lwjgl\\lwjgl.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jME3-core.jar}:\
     ${file.reference.jME3-desktop.jar}:\
@@ -67,6 +69,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=net.skyebook.cl.CLDistanceTest
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
@@ -77,7 +88,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Djava.library.path=C:\\aparapi-2011-10-13 -Dcom.amd.aparapi.logLevel=INFO
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
